--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-Flask==0.12
-Flask-API==0.6.9
-httpie==0.9.9
-pylint==1.7.2
+# Dependencies
+Flask==1.0.2
+Flask-API==1.0
+
+# Runtime
+gunicorn==19.9.0
+honcho==1.0.1
+
+# Testing
 nose==1.3.7
-rednose==1.2.1
 pinocchio==0.4.2
-coverage==4.2
+pylint==1.9.3
+rednose==1.3.0
+coverage==4.5.1
