--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,9 @@ python:
   - "2.7"
 # command to install dependencies
 install: "pip install -r requirements.txt"
+
 # command to run tests
 script: nosetests
+
+after_success:
+ - codecov
